--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
             <h2>Web Development</h2>
             <p>I love development, I enjoy it tremendously! I was lucky enough to get a job where in my free time I am able to do what I want as long as it is work releated. Currently I work as a help desk support agent but I also am able to do some web devlopment work when I have the time. I have fixed bugs and built full sites in my spare time but I would love to do this full time, both front-end and back-end!</p>
           </div>
-          <div class="col-sm-6"><img src="./imgs/responsive-web-design-layouts.jpg" alt="Multiple Devices"></div>
+          <div class="col-sm-6"><img src="./imgs/responsive_web_design_layouts.jpg" alt="Multiple Devices"></div>
         </div>
         <div id="it" class="row">
           <div class="col-sm-6 col-sm-push-6">
             <h2>Help Desk Support</h2>
             <p>I came into this role not knowing much but I had the drive and the know how to just figure it out on my own. I have learned alot in the last year, but I know that I still have ALOT to learn. I moved into a help desk teir 3 role after only 1 year, based on the fact that I am easy to work with and that I am able to figure out the problems I am having without the need to ask to many questions. I have become the translator at my job, and by that I mean if anyone is having trouble understanding what our web developer is saying, thats when the call me. </p>
           </div>
-          <div class="col-sm-6 col-sm-pull-6"><img src="./imgs/2-512.png" alt="Collin Perkins"></div>
+          <div class="col-sm-6 col-sm-pull-6"><img src="./imgs/settings.png" alt="Computer Settings"></div>
         </div>
       </section>
       <section id="skills" class="container">
